[build-system]
requires = [
	"setuptools >= 77.0.3",
	"build >= 1.3.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "starpy"
version = "1.1.1"
authors = [
  { name="Mike C. Fletcher", email="mcfletch@vrplumber.com" },
]
description = "Twisted Protocols for interaction with the Asterisk PBX"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

dependencies = [
	"Twisted >= 24.10.0"
]

[project.urls]
Homepage = "https://github.com/asterisk/starpy"
Issues = "https://github.com/asterisk/starpy/issues"

[tool.setuptools]
packages = ["starpy"]
